Data ready to use
Fixed data treatment, added README, fixed file paths

--- a/Code/DataDownload.ipynb
+++ b/Code/DataDownload.ipynb
@@ -328,6 +328,14 @@
     "})\n",
     "df_if_prudencial_full['DATA'] = pd.to_numeric(df_if_prudencial_full['DATA'], errors='coerce')\n",
     "\n",
+    "def corrigir_encoding(coluna):\n",
+    "    return coluna.astype(str).str.encode('latin1', errors='ignore').str.decode('utf-8', errors='ignore')\n",
+    "\n",
+    "colunas_texto = ['NomeRelatorio', 'Grupo', 'NomeColuna', 'DescricaoColuna']\n",
+    "for col in colunas_texto:\n",
+    "    if col in df_if_prudencial_full.columns:\n",
+    "        df_if_prudencial_full[col] = corrigir_encoding(df_if_prudencial_full[col])\n",
+    "\n",
     "# 5.7. Exportar raw IFDATA para Parquet\n",
     "df_if_prudencial_full.to_parquet(\n",
     "    dir_outputs / 'df_if_prudencial_full.parquet',\n",
@@ -346,10 +354,27 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1203944 entries, 0 to 1203943\n",
-      "Columns: 202 entries, DATA to Saldo\n",
-      "dtypes: float64(192), int64(2), object(8)\n",
-      "memory usage: 1.8+ GB\n"
+      "RangeIndex: 0 entries\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   DATA              0 non-null      int64  \n",
+      " 1   CNPJ              0 non-null      int64  \n",
+      " 2   AGENCIA           0 non-null      float64\n",
+      " 3   NOME_INSTITUICAO  0 non-null      object \n",
+      " 4   TAXONOMIA         0 non-null      object \n",
+      " 5   COD_CONGL         0 non-null      object \n",
+      " 6   NOME_CONGL        0 non-null      object \n",
+      " 7   TipoInstituicao   0 non-null      int64  \n",
+      " 8   NomeRelatorio     0 non-null      object \n",
+      " 9   NumeroRelatorio   0 non-null      int64  \n",
+      " 10  Grupo             0 non-null      object \n",
+      " 11  Conta             0 non-null      int64  \n",
+      " 12  NomeColuna        0 non-null      object \n",
+      " 13  DescricaoColuna   0 non-null      object \n",
+      " 14  Saldo             0 non-null      float64\n",
+      "dtypes: float64(2), int64(5), object(8)\n",
+      "memory usage: 132.0+ bytes\n"
      ]
     }
    ],
@@ -382,7 +407,7 @@
     "df_cosif_individual = (\n",
     "    df_cosif_individual_full\n",
     "    .pivot_table(\n",
-    "        index=['DATA', 'CNPJ', 'NOME_INSTITUICAO', 'TAXONOMIA'],\n",
+    "        index=['DATA', 'CNPJ', 'AGENCIA', 'NOME_INSTITUICAO', 'TAXONOMIA'],\n",
     "        columns='CONTA',\n",
     "        values='SALDO'\n",
     "    )\n",
@@ -426,6 +451,255 @@
     ")\n",
     "\n",
     "df_final.info()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a49d10d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Colunas de df_ind_pre: ['DATA', 'DOCUMENTO', 'CNPJ', 'AGENCIA', 'NOME_INSTITUICAO', 'TAXONOMIA', 'CONTA', 'NOME_CONTA', 'SALDO']\n",
+      "Shape de df_ind_pre: (224756, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ===== Cell N+1: Preparar df_ind_pre a partir de df_cosif_individual_full =====\n",
+    "\n",
+    "# Partindo de df_cosif_individual_full (já tem 'DATA' formatado como int)\n",
+    "df_ind_pre = (\n",
+    "    df_cosif_individual_full\n",
+    "    .assign(\n",
+    "        CNPJ=lambda d: d['CNPJ'].astype(str).str.replace(r'[^0-9]', '', regex=True)\n",
+    "    )\n",
+    "    .drop(columns=['COD_CONGL', 'NOME_CONGL'], errors='ignore')\n",
+    ")\n",
+    "\n",
+    "print(\"Colunas de df_ind_pre:\", df_ind_pre.columns.tolist())\n",
+    "print(\"Shape de df_ind_pre:\", df_ind_pre.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3b9c59c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Colunas de df_prud_mapping: ['DATA', 'CNPJ', 'COD_CONGL', 'NOME_CONGL']\n",
+      "Shape de df_prud_mapping: (1806, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ===== Cell N+2: Preparar df_prud_mapping a partir de df_cosif_prudencial_full =====\n",
+    "\n",
+    "# Partindo de df_cosif_prudencial_full (já tem 'DATA' formatado como int)\n",
+    "df_pru_pre = (\n",
+    "    df_cosif_prudencial_full\n",
+    "    .assign(\n",
+    "        CNPJ=lambda d: d['CNPJ'].astype(str).str.replace(r'[^0-9]', '', regex=True),\n",
+    "        COD_CONGL=lambda d: d['COD_CONGL'].astype(str)\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "df_prud_mapping = (\n",
+    "    df_pru_pre[['DATA', 'CNPJ', 'COD_CONGL', 'NOME_CONGL']]\n",
+    "    .drop_duplicates(subset=['DATA', 'CNPJ'])\n",
+    "    .reset_index(drop=True)\n",
+    ")\n",
+    "\n",
+    "print(\"Colunas de df_prud_mapping:\", df_prud_mapping.columns.tolist())\n",
+    "print(\"Shape de df_prud_mapping:\", df_prud_mapping.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "576a016d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape COSIF Full corrigido: (224756, 11)\n",
+      "Linhas sem COD_CONGL (valores NaN em COD_CONGL): 108088\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ===== Cell N+3: Criar df_cosif_full_corrigido (merge Individual + Prudencial) =====\n",
+    "\n",
+    "df_cosif_full_corrigido = pd.merge(\n",
+    "    df_ind_pre,\n",
+    "    df_prud_mapping,\n",
+    "    on=['DATA', 'CNPJ'],\n",
+    "    how='left',\n",
+    "    validate='many_to_one'\n",
+    ")\n",
+    "\n",
+    "print(\"Shape COSIF Full corrigido:\", df_cosif_full_corrigido.shape)\n",
+    "print(\n",
+    "    \"Linhas sem COD_CONGL (valores NaN em COD_CONGL):\",\n",
+    "    df_cosif_full_corrigido['COD_CONGL'].isna().sum()\n",
+    ")\n",
+    "\n",
+    "# Salvar parquet corrigido\n",
+    "df_cosif_full_corrigido.to_parquet(\n",
+    "    dir_outputs / 'df_cosif_full_corrigido.parquet',\n",
+    "    index=False\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f4203c4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Colunas de df_if_pre: ['TipoInstituicao', 'COD_CONGL', 'DATA', 'NomeRelatorio', 'NumeroRelatorio', 'Grupo', 'Conta', 'NomeColuna', 'DescricaoColuna', 'Saldo']\n",
+      "Shape de df_if_pre: (122838, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ===== Cell N+4: Preparar df_if_pre a partir de df_if_prudencial_full =====\n",
+    "\n",
+    "df_if_pre = (\n",
+    "    df_if_prudencial_full\n",
+    "    .assign(\n",
+    "        DATA=lambda d: pd.to_numeric(d['DATA'], errors='coerce').astype(int),\n",
+    "        COD_CONGL=lambda d: d['COD_CONGL'].astype(str)\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "print(\"Colunas de df_if_pre:\", df_if_pre.columns.tolist())\n",
+    "print(\"Shape de df_if_pre:\", df_if_pre.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bc33e417",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape DF Final corrigido: (1255244, 19)\n",
+      "Linhas sem informação de IFDATA (TipoInstituicao == NaN): 176822\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ===== Cell N+5: Criar df_final_corrigido (merge COSIF Full corrigido + IFDATA) =====\n",
+    "\n",
+    "df_final_corrigido = pd.merge(\n",
+    "    df_cosif_full_corrigido.assign(COD_CONGL=lambda d: d['COD_CONGL'].astype(str)),\n",
+    "    df_if_pre,\n",
+    "    on=['DATA', 'COD_CONGL'],\n",
+    "    how='left',\n",
+    "    validate='many_to_many'\n",
+    ")\n",
+    "\n",
+    "print(\"Shape DF Final corrigido:\", df_final_corrigido.shape)\n",
+    "print(\n",
+    "    \"Linhas sem informação de IFDATA (TipoInstituicao == NaN):\",\n",
+    "    df_final_corrigido['TipoInstituicao'].isna().sum()\n",
+    ")\n",
+    "\n",
+    "# Salvar parquet corrigido\n",
+    "df_final_corrigido.to_parquet(\n",
+    "    dir_outputs / 'df_final_corrigido.parquet',\n",
+    "    index=False\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c39f07cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Resumo Final ===\n",
+      "df_cosif_full_corrigido:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 224756 entries, 0 to 224755\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column            Non-Null Count   Dtype  \n",
+      "---  ------            --------------   -----  \n",
+      " 0   DATA              224756 non-null  int64  \n",
+      " 1   DOCUMENTO         224756 non-null  int64  \n",
+      " 2   CNPJ              224756 non-null  object \n",
+      " 3   AGENCIA           0 non-null       float64\n",
+      " 4   NOME_INSTITUICAO  224756 non-null  object \n",
+      " 5   TAXONOMIA         224756 non-null  object \n",
+      " 6   CONTA             224756 non-null  int64  \n",
+      " 7   NOME_CONTA        224756 non-null  object \n",
+      " 8   SALDO             224756 non-null  float64\n",
+      " 9   COD_CONGL         116668 non-null  object \n",
+      " 10  NOME_CONGL        116668 non-null  object \n",
+      "dtypes: float64(2), int64(3), object(6)\n",
+      "memory usage: 18.9+ MB\n",
+      "\n",
+      "df_final_corrigido:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1255244 entries, 0 to 1255243\n",
+      "Data columns (total 19 columns):\n",
+      " #   Column            Non-Null Count    Dtype  \n",
+      "---  ------            --------------    -----  \n",
+      " 0   DATA              1255244 non-null  int64  \n",
+      " 1   DOCUMENTO         1255244 non-null  int64  \n",
+      " 2   CNPJ              1255244 non-null  object \n",
+      " 3   AGENCIA           0 non-null        float64\n",
+      " 4   NOME_INSTITUICAO  1255244 non-null  object \n",
+      " 5   TAXONOMIA         1255244 non-null  object \n",
+      " 6   CONTA             1255244 non-null  int64  \n",
+      " 7   NOME_CONTA        1255244 non-null  object \n",
+      " 8   SALDO             1255244 non-null  float64\n",
+      " 9   COD_CONGL         1255244 non-null  object \n",
+      " 10  NOME_CONGL        1147156 non-null  object \n",
+      " 11  TipoInstituicao   1078422 non-null  float64\n",
+      " 12  NomeRelatorio     1078422 non-null  object \n",
+      " 13  NumeroRelatorio   1078422 non-null  float64\n",
+      " 14  Grupo             1078422 non-null  object \n",
+      " 15  Conta             1078422 non-null  float64\n",
+      " 16  NomeColuna        1078422 non-null  object \n",
+      " 17  DescricaoColuna   1078422 non-null  object \n",
+      " 18  Saldo             1074236 non-null  float64\n",
+      "dtypes: float64(6), int64(3), object(10)\n",
+      "memory usage: 182.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ===== Cell N+6 (opcional): Informações finais dos DataFrames corrigidos =====\n",
+    "\n",
+    "print(\"\\n=== Resumo Final ===\")\n",
+    "print(\"df_cosif_full_corrigido:\")\n",
+    "df_cosif_full_corrigido.info()\n",
+    "\n",
+    "print(\"\\ndf_final_corrigido:\")\n",
+    "df_final_corrigido.info()\n"
    ]
   }
  ],
