--- a/Code/DataDownload.ipynb
+++ b/Code/DataDownload.ipynb
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8d0b210d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ─── 1. Definição dos date_ranges (somente uma vez) ────────────────────────────\n",
+    "# ─── 1. Definição dos date_ranges ────────────────────────────\n",
     "# 1.1. Intervalo mensal: de janeiro/2017 a dezembro/2024 (formato \"YYYYMM\")\n",
     "date_range_monthly = (\n",
     "    pd.date_range(start='2024-01-01', end='2024-12-31', freq='M')\n",
