Removed Notebook Outputs

--- a/Code/DataDownload.ipynb
+++ b/Code/DataDownload.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "fe2ef976",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1a40318f",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "f4518172",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0308b2ed",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e6623c3d",
    "metadata": {},
    "outputs": [],
@@ -345,39 +345,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "6d66eac9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 0 entries\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column            Non-Null Count  Dtype  \n",
-      "---  ------            --------------  -----  \n",
-      " 0   DATA              0 non-null      int64  \n",
-      " 1   CNPJ              0 non-null      int64  \n",
-      " 2   AGENCIA           0 non-null      float64\n",
-      " 3   NOME_INSTITUICAO  0 non-null      object \n",
-      " 4   TAXONOMIA         0 non-null      object \n",
-      " 5   COD_CONGL         0 non-null      object \n",
-      " 6   NOME_CONGL        0 non-null      object \n",
-      " 7   TipoInstituicao   0 non-null      int64  \n",
-      " 8   NomeRelatorio     0 non-null      object \n",
-      " 9   NumeroRelatorio   0 non-null      int64  \n",
-      " 10  Grupo             0 non-null      object \n",
-      " 11  Conta             0 non-null      int64  \n",
-      " 12  NomeColuna        0 non-null      object \n",
-      " 13  DescricaoColuna   0 non-null      object \n",
-      " 14  Saldo             0 non-null      float64\n",
-      "dtypes: float64(2), int64(5), object(8)\n",
-      "memory usage: 132.0+ bytes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ─── 6. Combinações finais (sem filtros) ───────────────────────────────────────\n",
     "\n",
@@ -455,19 +426,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "a49d10d9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Colunas de df_ind_pre: ['DATA', 'DOCUMENTO', 'CNPJ', 'AGENCIA', 'NOME_INSTITUICAO', 'TAXONOMIA', 'CONTA', 'NOME_CONTA', 'SALDO']\n",
-      "Shape de df_ind_pre: (224756, 9)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===== Cell N+1: Preparar df_ind_pre a partir de df_cosif_individual_full =====\n",
     "\n",
@@ -486,19 +448,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "3b9c59c4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Colunas de df_prud_mapping: ['DATA', 'CNPJ', 'COD_CONGL', 'NOME_CONGL']\n",
-      "Shape de df_prud_mapping: (1806, 4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===== Cell N+2: Preparar df_prud_mapping a partir de df_cosif_prudencial_full =====\n",
     "\n",
@@ -523,19 +476,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "576a016d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape COSIF Full corrigido: (224756, 11)\n",
-      "Linhas sem COD_CONGL (valores NaN em COD_CONGL): 108088\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===== Cell N+3: Criar df_cosif_full_corrigido (merge Individual + Prudencial) =====\n",
     "\n",
@@ -562,19 +506,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f4203c4a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Colunas de df_if_pre: ['TipoInstituicao', 'COD_CONGL', 'DATA', 'NomeRelatorio', 'NumeroRelatorio', 'Grupo', 'Conta', 'NomeColuna', 'DescricaoColuna', 'Saldo']\n",
-      "Shape de df_if_pre: (122838, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===== Cell N+4: Preparar df_if_pre a partir de df_if_prudencial_full =====\n",
     "\n",
@@ -592,19 +527,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "bc33e417",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape DF Final corrigido: (1255244, 19)\n",
-      "Linhas sem informação de IFDATA (TipoInstituicao == NaN): 176822\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===== Cell N+5: Criar df_final_corrigido (merge COSIF Full corrigido + IFDATA) =====\n",
     "\n",
@@ -631,66 +557,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c39f07cd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== Resumo Final ===\n",
-      "df_cosif_full_corrigido:\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 224756 entries, 0 to 224755\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column            Non-Null Count   Dtype  \n",
-      "---  ------            --------------   -----  \n",
-      " 0   DATA              224756 non-null  int64  \n",
-      " 1   DOCUMENTO         224756 non-null  int64  \n",
-      " 2   CNPJ              224756 non-null  object \n",
-      " 3   AGENCIA           0 non-null       float64\n",
-      " 4   NOME_INSTITUICAO  224756 non-null  object \n",
-      " 5   TAXONOMIA         224756 non-null  object \n",
-      " 6   CONTA             224756 non-null  int64  \n",
-      " 7   NOME_CONTA        224756 non-null  object \n",
-      " 8   SALDO             224756 non-null  float64\n",
-      " 9   COD_CONGL         116668 non-null  object \n",
-      " 10  NOME_CONGL        116668 non-null  object \n",
-      "dtypes: float64(2), int64(3), object(6)\n",
-      "memory usage: 18.9+ MB\n",
-      "\n",
-      "df_final_corrigido:\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1255244 entries, 0 to 1255243\n",
-      "Data columns (total 19 columns):\n",
-      " #   Column            Non-Null Count    Dtype  \n",
-      "---  ------            --------------    -----  \n",
-      " 0   DATA              1255244 non-null  int64  \n",
-      " 1   DOCUMENTO         1255244 non-null  int64  \n",
-      " 2   CNPJ              1255244 non-null  object \n",
-      " 3   AGENCIA           0 non-null        float64\n",
-      " 4   NOME_INSTITUICAO  1255244 non-null  object \n",
-      " 5   TAXONOMIA         1255244 non-null  object \n",
-      " 6   CONTA             1255244 non-null  int64  \n",
-      " 7   NOME_CONTA        1255244 non-null  object \n",
-      " 8   SALDO             1255244 non-null  float64\n",
-      " 9   COD_CONGL         1255244 non-null  object \n",
-      " 10  NOME_CONGL        1147156 non-null  object \n",
-      " 11  TipoInstituicao   1078422 non-null  float64\n",
-      " 12  NomeRelatorio     1078422 non-null  object \n",
-      " 13  NumeroRelatorio   1078422 non-null  float64\n",
-      " 14  Grupo             1078422 non-null  object \n",
-      " 15  Conta             1078422 non-null  float64\n",
-      " 16  NomeColuna        1078422 non-null  object \n",
-      " 17  DescricaoColuna   1078422 non-null  object \n",
-      " 18  Saldo             1074236 non-null  float64\n",
-      "dtypes: float64(6), int64(3), object(10)\n",
-      "memory usage: 182.0+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ===== Cell N+6 (opcional): Informações finais dos DataFrames corrigidos =====\n",
     "\n",
@@ -704,8 +574,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
