Added new IF Data

--- a/Code/DataCheck.ipynb
+++ b/Code/DataCheck.ipynb
@@ -8,18 +8,18 @@
    "outputs": [],
    "source": [
     "# ===== Cell 1: Imports e carregamento do arquivo Parquet final corrigido =====\n",
-    "from pathlib import Path # Adicionar import\n",
+    "from pathlib import Path\n",
     "import pandas as pd\n",
     "\n",
     "# --- Definir caminhos relativos ---\n",
     "# Assumindo que DataCheck.ipynb está na pasta 'Code/'\n",
     "# e a pasta 'Output/' está um nível acima, dentro da raiz do projeto.\n",
-    "notebook_parent_dir = Path('..') # Vai de 'Code/' para 'b3-analise-bancos/'\n",
+    "notebook_parent_dir = Path('..')  # Vai de 'Code/' para 'b3-analise-bancos/'\n",
     "output_dir = notebook_parent_dir / 'Output'\n",
     "\n",
     "# Caminhos para os arquivos Parquet\n",
     "parquet_path = output_dir / 'df_final_corrigido.parquet'\n",
-    "parquet_cosif_full_path = output_dir / 'df_cosif_full_corrigido.parquet' # Renomeei a variável para clareza\n",
+    "parquet_cosif_full_path = output_dir / 'df_cosif_full_corrigido.parquet'  # Renomeei a variável para clareza\n",
     "\n",
     "# Carrega o DataFrame\n",
     "df = pd.read_parquet(parquet_path)\n"
