--- a/Code/DataDownload.ipynb
+++ b/Code/DataDownload.ipynb
@@ -260,43 +260,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ─── 5. Pipeline IFDATA (trimestral) ───────────────────────────────────────────\n",
-    "\n",
-    "# 5.1. Diretório para baixar/armazenar IFDATA\n",
+    "# ─── 5. Pipeline IFDATA (valores + cadastro) – VERSÃO ATUALIZADA PARA TODOS TIPOS DE INSTITUIÇÃO ─────────────────────────────────\n",
+    "# 5.1. Diretório para baixar/armazenar IFDATA de VALORES\n",
     "ifdata_dir = dir_inputs / 'IFDATA'\n",
     "ifdata_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "# 5.2. Download dos CSVs da API do IFDATA (conteúdo já filtrado na URL)\n",
+    "# 5.2. Download dos CSVs “IfDataValores” (métricas) PARA TODOS OS TIPOS DE INSTITUIÇÃO\n",
+    "# Vamos iterar sobre cada trimestre e cada tipo de instituição (1 a 4), usando Relatorio='T' para trazer todos os relatórios\n",
+    "tipos_instit = [1, 2, 3]  # TipoInstituicao disponíveis na API\n",
     "for date in date_range_quarterly:\n",
-    "    url = (\n",
-    "        \"https://olinda.bcb.gov.br/olinda/servico/IFDATA/versao/v1/odata/\"\n",
-    "        f\"IfDataValores(AnoMes=@AnoMes,TipoInstituicao=@TipoInstituicao,Relatorio=@Relatorio)?\"\n",
-    "        f\"@AnoMes={date}&@TipoInstituicao=1&@Relatorio='5'\"\n",
-    "        \"&$format=text/csv\"\n",
-    "    )\n",
-    "    output = ifdata_dir / f\"{date}.csv\"\n",
-    "    if not output.exists():\n",
-    "        r = requests.get(url)\n",
-    "        with open(output, 'wb') as f:\n",
-    "            f.write(r.content)\n",
+    "    for tipo in tipos_instit:\n",
+    "        url_val = (\n",
+    "            \"https://olinda.bcb.gov.br/olinda/servico/IFDATA/versao/v1/odata/\"\n",
+    "            f\"IfDataValores(AnoMes=@AnoMes,TipoInstituicao=@TipoInstituicao,Relatorio=@Relatorio)?\"\n",
+    "            f\"@AnoMes={date}&@TipoInstituicao={tipo}&@Relatorio='T'\"\n",
+    "            \"&$format=text/csv\"\n",
+    "        )\n",
+    "        output_csv_val = ifdata_dir / f\"{date}_{tipo}.csv\"\n",
+    "        if not output_csv_val.exists():\n",
+    "            resp = requests.get(url_val, timeout=60)\n",
+    "            with open(output_csv_val, 'wb') as f:\n",
+    "                f.write(resp.content)\n",
     "\n",
-    "# 5.3. Leitura de TODOS os CSVs IFDATA em um DataFrame único (raw)\n",
+    "# 5.3. Leitura de TODOS os CSVs “IfDataValores” em um DataFrame único\n",
     "df_if_list = []\n",
     "for date in date_range_quarterly:\n",
-    "    path = ifdata_dir / f\"{date}.csv\"\n",
-    "    if path.exists():\n",
-    "        temp = pd.read_csv(\n",
-    "            path,\n",
-    "            encoding='unicode_escape',\n",
-    "            on_bad_lines='skip',\n",
-    "            sep=',',\n",
-    "            decimal=','\n",
-    "        )\n",
-    "        df_if_list.append(temp)\n",
-    "\n",
+    "    for tipo in tipos_instit:\n",
+    "        path = ifdata_dir / f\"{date}_{tipo}.csv\"\n",
+    "        if path.exists() and path.stat().st_size > 0:\n",
+    "            temp = pd.read_csv(\n",
+    "                path,\n",
+    "                encoding='unicode_escape',\n",
+    "                on_bad_lines='skip',\n",
+    "                sep=',',\n",
+    "                decimal=','\n",
+    "            )\n",
+    "            # Garantir que a coluna TipoInstituicao reflita corretamente o tipo que baixamos\n",
+    "            if 'TipoInstituicao' not in temp.columns:\n",
+    "                temp['TipoInstituicao'] = tipo\n",
+    "            df_if_list.append(temp)\n",
     "df_if_prudencial_full = pd.concat(df_if_list, ignore_index=True)\n",
     "\n",
-    "# 5.4. Padronização de colunas IFDATA\n",
+    "\n",
+    "# ─── 5.4. Pipeline IFDATA_CADASTRO ─────────────────────────────────────────────\n",
+    "# 5.4.1. Cria diretório para baixar/armazenar “IfDataCadastro”\n",
+    "ifdata_cadastro_dir = dir_inputs / 'IFDATA_Cadastro'\n",
+    "ifdata_cadastro_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# 5.4.2. Download dos CSVs “IfDataCadastro” da API\n",
+    "for date in date_range_monthly:\n",
+    "    url_cadastro = (\n",
+    "        f\"https://olinda.bcb.gov.br/olinda/servico/IFDATA/versao/v1/odata/\"\n",
+    "        f\"IfDataCadastro(AnoMes=@AnoMes)?@AnoMes={date}&$format=text/csv\"\n",
+    "    )\n",
+    "    output_csv_cad = ifdata_cadastro_dir / f\"IfDataCadastro_{date}.csv\"\n",
+    "    if not output_csv_cad.exists():\n",
+    "        resp = requests.get(url_cadastro, timeout=60)\n",
+    "        with open(output_csv_cad, 'wb') as f:\n",
+    "            f.write(resp.content)\n",
+    "\n",
+    "# 5.4.3. Leitura de TODOS os CSVs “IfDataCadastro” em um DataFrame único\n",
+    "df_if_cad_list = []\n",
+    "for date in date_range_monthly:\n",
+    "    path = ifdata_cadastro_dir / f\"IfDataCadastro_{date}.csv\"\n",
+    "    if path.exists() and path.stat().st_size > 0:\n",
+    "        temp_cad = pd.read_csv(\n",
+    "            path,\n",
+    "            encoding='utf-8',\n",
+    "            on_bad_lines='skip',\n",
+    "            sep=',',\n",
+    "            decimal='.'\n",
+    "        )\n",
+    "        df_if_cad_list.append(temp_cad)\n",
+    "if df_if_cad_list:\n",
+    "    df_if_cadastro_full = pd.concat(df_if_cad_list, ignore_index=True)\n",
+    "else:\n",
+    "    df_if_cadastro_full = pd.DataFrame()  # Se nenhum CSV existir, DataFrame vazio\n",
+    "\n",
+    "# 5.4.4. Ajustes iniciais em df_if_cadastro_full\n",
+    "if not df_if_cadastro_full.empty:\n",
+    "    df_if_cadastro_full = df_if_cadastro_full.rename(columns={\n",
+    "        'Data': 'DATA',\n",
+    "        'CodConglomeradoPrudencial': 'COD_CONGL'\n",
+    "    })\n",
+    "    df_if_cadastro_full['DATA'] = pd.to_numeric(df_if_cadastro_full['DATA'], errors='coerce').astype(int)\n",
+    "    df_if_cadastro_full['COD_CONGL'] = df_if_cadastro_full['COD_CONGL'].astype(str)\n",
+    "\n",
+    "    # Remover caracteres não imprimíveis das colunas textuais de cadastro\n",
+    "    def remove_illegal(text: str) -> str:\n",
+    "        return re.sub(r'[\\x00-\\x1F\\x7F]', '', str(text))\n",
+    "    for col in ['NomeInstituicao','SegmentoTb','Atividade','Uf','Municipio','Situacao']:\n",
+    "        if col in df_if_cadastro_full.columns:\n",
+    "            df_if_cadastro_full[col] = df_if_cadastro_full[col].astype(str).apply(remove_illegal)\n",
+    "\n",
+    "# ─── 5.5. Padronização de colunas em df_if_prudencial_full (valores) ─────────────\n",
     "def map_coluna(c):\n",
     "    return {\n",
     "        79647: \"Tier_1\",\n",
@@ -311,7 +368,7 @@
     "\n",
     "df_if_prudencial_full['NomeColuna'] = df_if_prudencial_full['Conta'].apply(map_coluna)\n",
     "\n",
-    "# 5.5. (Opcional) Dicionário de contas IFDATA em Excel\n",
+    "# 5.5.1. (Opcional) Dicionário de contas IFDATA em Excel\n",
     "account_name_ifdata = (\n",
     "    df_if_prudencial_full\n",
     "    .sort_values('Conta')\n",
@@ -321,26 +378,45 @@
     "account_name_ifdata['NomeColuna'] = account_name_ifdata['NomeColuna'].astype(str).apply(remove_illegal)\n",
     "account_name_ifdata.to_excel(dir_outputs / 'if_account_name.xlsx', index=False)\n",
     "\n",
-    "# 5.6. Ajuste final de nomes e tipos IFDATA\n",
+    "# ─── 5.6. Ajuste final de nomes e tipos em df_if_prudencial_full (valores) ─────────\n",
     "df_if_prudencial_full = df_if_prudencial_full.rename(columns={\n",
     "    'CodInst': 'COD_CONGL',\n",
     "    'AnoMes': 'DATA'\n",
     "})\n",
-    "df_if_prudencial_full['DATA'] = pd.to_numeric(df_if_prudencial_full['DATA'], errors='coerce')\n",
+    "df_if_prudencial_full['DATA'] = pd.to_numeric(df_if_prudencial_full['DATA'], errors='coerce').astype(int)\n",
+    "df_if_prudencial_full['COD_CONGL'] = df_if_prudencial_full['COD_CONGL'].astype(str)\n",
     "\n",
+    "# ─── 5.7. Merge de “IfDataValores” (df_if_prudencial_full) com “IfDataCadastro” ────\n",
+    "if not df_if_cadastro_full.empty:\n",
+    "    df_if_combined = pd.merge(\n",
+    "        df_if_prudencial_full,\n",
+    "        df_if_cadastro_full,\n",
+    "        on=['DATA', 'COD_CONGL'],\n",
+    "        how='left',\n",
+    "        validate='many_to_many'   # antes era 'many_to_one'\n",
+    "    )\n",
+    "else:\n",
+    "    df_if_combined = df_if_prudencial_full.copy()\n",
+    "\n",
+    "# 5.7.1. Verificar colunas resultantes\n",
+    "print(\"Colunas após merge Valores + Cadastro (IFDATA):\")\n",
+    "print(df_if_combined.columns.tolist())\n",
+    "print(\"Shape df_if_combined:\", df_if_combined.shape)\n",
+    "\n",
+    "# ─── 5.8. Correção de encoding de texto em df_if_combined ─────────────────────────\n",
     "def corrigir_encoding(coluna):\n",
     "    return coluna.astype(str).str.encode('latin1', errors='ignore').str.decode('utf-8', errors='ignore')\n",
     "\n",
-    "colunas_texto = ['NomeRelatorio', 'Grupo', 'NomeColuna', 'DescricaoColuna']\n",
-    "for col in colunas_texto:\n",
-    "    if col in df_if_prudencial_full.columns:\n",
-    "        df_if_prudencial_full[col] = corrigir_encoding(df_if_prudencial_full[col])\n",
+    "colunas_texto_if = ['NomeRelatorio','Grupo','NomeColuna','DescricaoColuna']\n",
+    "for col in colunas_texto_if:\n",
+    "    if col in df_if_combined.columns:\n",
+    "        df_if_combined[col] = corrigir_encoding(df_if_combined[col])\n",
     "\n",
-    "# 5.7. Exportar raw IFDATA para Parquet\n",
-    "df_if_prudencial_full.to_parquet(\n",
+    "# ─── 5.9. Exportar DataFrame unificado de IFDATA para Parquet ────────────────────\n",
+    "df_if_combined.to_parquet(\n",
     "    dir_outputs / 'df_if_prudencial_full.parquet',\n",
     "    index=False\n",
-    ")"
+    ")\n"
    ]
   },
   {
@@ -378,7 +454,7 @@
     "df_cosif_individual = (\n",
     "    df_cosif_individual_full\n",
     "    .pivot_table(\n",
-    "        index=['DATA', 'CNPJ', 'AGENCIA', 'NOME_INSTITUICAO', 'TAXONOMIA'],\n",
+    "        index=['DATA', 'CNPJ', 'NOME_INSTITUICAO', 'TAXONOMIA'],\n",
     "        columns='CONTA',\n",
     "        values='SALDO'\n",
     "    )\n",
@@ -405,13 +481,12 @@
     "\n",
     "\n",
     "# 6.4. Merge final com IFDATA (raw)\n",
-    "# Certificar que df_if_prudencial_full já tem 'DATA' como inteiro\n",
-    "# (normalmente foi ajustado antes, mas só por garantia:)\n",
-    "if 'DATA' in df_if_prudencial_full.columns:\n",
-    "    df_if_prudencial_full['DATA'] = pd.to_numeric(df_if_prudencial_full['DATA'], errors='coerce')\n",
+    "# Certificar que df_if_combined já tem 'DATA' como inteiro\n",
+    "if 'DATA' in df_if_combined.columns:\n",
+    "    df_if_combined['DATA'] = pd.to_numeric(df_if_combined['DATA'], errors='coerce')\n",
     "\n",
     "df_final = df_cosif_full.merge(\n",
-    "    df_if_prudencial_full,\n",
+    "    df_if_combined,\n",
     "    on=['DATA', 'COD_CONGL'],\n",
     "    how='left'\n",
     ")\n",
@@ -443,7 +518,7 @@
     ")\n",
     "\n",
     "print(\"Colunas de df_ind_pre:\", df_ind_pre.columns.tolist())\n",
-    "print(\"Shape de df_ind_pre:\", df_ind_pre.shape)\n"
+    "print(\"Shape de df_ind_pre:\", df_ind_pre.shape)"
    ]
   },
   {
@@ -471,7 +546,7 @@
     ")\n",
     "\n",
     "print(\"Colunas de df_prud_mapping:\", df_prud_mapping.columns.tolist())\n",
-    "print(\"Shape de df_prud_mapping:\", df_prud_mapping.shape)\n"
+    "print(\"Shape de df_prud_mapping:\", df_prud_mapping.shape)"
    ]
   },
   {
@@ -501,7 +576,7 @@
     "df_cosif_full_corrigido.to_parquet(\n",
     "    dir_outputs / 'df_cosif_full_corrigido.parquet',\n",
     "    index=False\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -511,10 +586,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ===== Cell N+4: Preparar df_if_pre a partir de df_if_prudencial_full =====\n",
+    "# ===== Cell N+4: Preparar df_if_pre a partir de df_if_combined =====\n",
     "\n",
     "df_if_pre = (\n",
-    "    df_if_prudencial_full\n",
+    "    df_if_combined\n",
     "    .assign(\n",
     "        DATA=lambda d: pd.to_numeric(d['DATA'], errors='coerce').astype(int),\n",
     "        COD_CONGL=lambda d: d['COD_CONGL'].astype(str)\n",
@@ -522,7 +597,7 @@
     ")\n",
     "\n",
     "print(\"Colunas de df_if_pre:\", df_if_pre.columns.tolist())\n",
-    "print(\"Shape de df_if_pre:\", df_if_pre.shape)\n"
+    "print(\"Shape de df_if_pre:\", df_if_pre.shape)"
    ]
   },
   {
@@ -552,7 +627,7 @@
     "df_final_corrigido.to_parquet(\n",
     "    dir_outputs / 'df_final_corrigido.parquet',\n",
     "    index=False\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -569,7 +644,7 @@
     "df_cosif_full_corrigido.info()\n",
     "\n",
     "print(\"\\ndf_final_corrigido:\")\n",
-    "df_final_corrigido.info()\n"
+    "df_final_corrigido.info()"
    ]
   }
  ],
@@ -580,7 +655,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
