Fixed Pivots and Drops

--- a/Code/DataDownload.ipynb
+++ b/Code/DataDownload.ipynb
@@ -25,14 +25,14 @@
    "outputs": [],
    "source": [
     "# ─── 1. Definição dos date_ranges ────────────────────────────\n",
-    "# 1.1. Intervalo mensal: de janeiro/2017 a dezembro/2024 (formato \"YYYYMM\")\n",
+    "# 1.1. Intervalo mensal: (formato \"YYYYMM\")\n",
     "date_range_monthly = (\n",
     "    pd.date_range(start='2024-01-01', end='2024-12-31', freq='M')\n",
     "      .strftime(\"%Y%m\")\n",
     "      .tolist()\n",
     ")\n",
     "\n",
-    "# 1.2. Intervalo trimestral: de março/2017 a dezembro/2024 (formato \"YYYYMM\")\n",
+    "# 1.2. Intervalo trimestral: (formato \"YYYYMM\")\n",
     "date_range_quarterly = (\n",
     "    pd.date_range(start='2024-01-01', end='2024-12-31', freq='Q')\n",
     "      .strftime(\"%Y%m\")\n",
@@ -142,7 +142,7 @@
     "    index=False\n",
     ")\n",
     "\n",
-    "# 3.5. (Opcional) Dicionário de contas Individual em Excel\n",
+    "# 3.5. Cria um dicionário de contas Individual em Excel\n",
     "account_name = (\n",
     "    df_cosif_individual_full\n",
     "    .sort_values('CONTA')\n",
@@ -242,7 +242,7 @@
     "    index=False\n",
     ")\n",
     "\n",
-    "# 4.5. (Opcional) Dicionário de contas Prudencial em Excel\n",
+    "# 4.5. Cria um dicionário de contas Prudencial em Excel\n",
     "account_prud = (\n",
     "    df_cosif_prudencial_full\n",
     "    .sort_values('CONTA')\n",
@@ -260,13 +260,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ─── 5. Pipeline IFDATA (valores + cadastro) – VERSÃO ATUALIZADA PARA TODOS TIPOS DE INSTITUIÇÃO ─────────────────────────────────\n",
+    "# ─── 5. Pipeline IFDATA_VALORES ─────────────────────────────────\n",
     "# 5.1. Diretório para baixar/armazenar IFDATA de VALORES\n",
     "ifdata_dir = dir_inputs / 'IFDATA'\n",
     "ifdata_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# 5.2. Download dos CSVs “IfDataValores” (métricas) PARA TODOS OS TIPOS DE INSTITUIÇÃO\n",
-    "# Vamos iterar sobre cada trimestre e cada tipo de instituição (1 a 4), usando Relatorio='T' para trazer todos os relatórios\n",
+    "# Vamos iterar sobre cada trimestre e cada tipo de instituição (1 a 3), usando Relatorio='T' para trazer todos os relatórios\n",
     "tipos_instit = [1, 2, 3]  # TipoInstituicao disponíveis na API\n",
     "for date in date_range_quarterly:\n",
     "    for tipo in tipos_instit:\n",
@@ -368,7 +368,7 @@
     "\n",
     "df_if_prudencial_full['NomeColuna'] = df_if_prudencial_full['Conta'].apply(map_coluna)\n",
     "\n",
-    "# 5.5.1. (Opcional) Dicionário de contas IFDATA em Excel\n",
+    "# 5.5.1. Cria um dicionário de contas IFDATA em Excel\n",
     "account_name_ifdata = (\n",
     "    df_if_prudencial_full\n",
     "    .sort_values('Conta')\n",
@@ -397,11 +397,6 @@
     "    )\n",
     "else:\n",
     "    df_if_combined = df_if_prudencial_full.copy()\n",
-    "\n",
-    "# 5.7.1. Verificar colunas resultantes\n",
-    "print(\"Colunas após merge Valores + Cadastro (IFDATA):\")\n",
-    "print(df_if_combined.columns.tolist())\n",
-    "print(\"Shape df_if_combined:\", df_if_combined.shape)\n",
     "\n",
     "# ─── 5.8. Correção de encoding de texto em df_if_combined ─────────────────────────\n",
     "def corrigir_encoding(coluna):\n",
@@ -454,7 +449,7 @@
     "df_cosif_individual = (\n",
     "    df_cosif_individual_full\n",
     "    .pivot_table(\n",
-    "        index=['DATA', 'CNPJ', 'NOME_INSTITUICAO', 'TAXONOMIA'],\n",
+    "        index=['DATA', 'CNPJ', 'AGENCIA', 'NOME_INSTITUICAO', 'TAXONOMIA'],\n",
     "        columns='CONTA',\n",
     "        values='SALDO'\n",
     "    )\n",
@@ -514,7 +509,7 @@
     "    .assign(\n",
     "        CNPJ=lambda d: d['CNPJ'].astype(str).str.replace(r'[^0-9]', '', regex=True)\n",
     "    )\n",
-    "    .drop(columns=['COD_CONGL', 'NOME_CONGL'], errors='ignore')\n",
+    "    .drop(columns=['COD_CONGL', 'NOME_CONGL', 'AGENCIA'], errors='ignore')\n",
     ")\n",
     "\n",
     "print(\"Colunas de df_ind_pre:\", df_ind_pre.columns.tolist())\n",
@@ -637,7 +632,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ===== Cell N+6 (opcional): Informações finais dos DataFrames corrigidos =====\n",
+    "# ===== Cell N+6: Informações finais dos DataFrames corrigidos =====\n",
     "\n",
     "print(\"\\n=== Resumo Final ===\")\n",
     "print(\"df_cosif_full_corrigido:\")\n",
